Fix the vertical scroll issue on iOS Safari
The issue is with application UI not being fully visible and an unwanted vertical scroll is introduced.

--- a/src/client/styles/styles.scss
+++ b/src/client/styles/styles.scss
@@ -6,7 +6,7 @@
 html, body {
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  height: 100%;
   margin: 0px;
   overflow: hidden;
   box-sizing: border-box;
